# autonomous-rover

./: README.md  install.sh
diagram_src/: AI_Rover.kicad_prl  AI_Rover.kicad_pro  AI_Rover.kicad_sch  block_diagram.drawio  hardware_block_diagram.drawio  software_block_diagram.drawio  wiring_schematic.kicad_sch
src/: manual_driving.cpp  manual_driving_listener.cpp  manual_driving_sender.py  motor_control.cpp  motor_control.hpp
src/Phone/: CMakeLists.txt  DashboardPublisher.cpp  DashboardPublisher.hpp  FrameBuffer.cpp  FrameBuffer.hpp  MyCamera.cpp  MyCamera.hpp  create_apk.sh  main.cpp
src/Phone/android_wrapper/: settings.gradle.kts
src/Phone/android_wrapper/app/: build.gradle.kts
src/Phone/android_wrapper/app/src/main/: AndroidManifest.xml
src/Phone/android_wrapper/app/src/main/res/values/: strings.xml
src/Phone/android_wrapper/gradle/wrapper/: gradle-wrapper.properties
src/Phone/include/: DashboardPublisher.hpp
src/Phone/src/: DashboardPublisher.cpp  MyCamera.cpp  main.cpp
src/RasPi/: manual_driving_listener.cpp  motor_control.cpp  motor_control.hpp
src/Server/: CMakeLists.txt  create_executable.sh  manual_driving_sender.py
src/Server/include/: DashboardListener.hpp  DashboardUI.hpp
src/Server/src/: DashboardListener.cpp  DashboardUI.cpp  GroundControlStation.cpp
src/Shared/: RobotState.hpp
src/Shared/include/: FrameBuffer.hpp  Location2D.hpp
src/Shared/src/: FrameBuffer.cpp
what_I_learn/: my_android_stuff_understanding.txt  network_latency.txt
